--- a/index.Rmd
+++ b/index.Rmd
@@ -5,4 +5,4 @@ date: "2023-04-12"
 author: Katrina Kechun Li
 ---
 
-This website is accompany the submitted paper for ICPhS special session: Disentangling Intonation in Tone languages.
+This website provides the accompany examples for the submitted paper for ICPhS special session: Disentangling Intonation in Tone languages.
